[package]
name = "ftp"
version = "3.0.1"
authors = ["Matt McCoy <mattnenterprise@yahoo.com>"]
documentation = "https://docs.rs/ftp/"
repository = "https://github.com/mattnenterprise/rust-ftp"
description = "FTP client for Rust"
readme = "README.md"
license = "Apache-2.0/MIT"
keywords = ["ftp"]
categories = ["network-programming"]

[badges]
travis-ci = { repository = "mattnenterprise/rust-ftp" }

[lib]
name ="ftp"
path = "src/lib.rs"

[dependencies]
lazy_static = "1.4.0"
regex = "1.4.2"
chrono = "0.4.19"
openssl = { version = "^0.10", optional = true }
rustls = { version = "^0.19.0", optional = true }
